# raylibTestProject

./: .clangd  .gitignore  CLICKTHISDUMMY  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  VersioningConfig.h.in  \  cmake_install.cmake  example.jsx  make  makefile
cmake/: CMakeCache.txt  Makefile  cmake_install.cmake
perpetualFiles/: settings.txt
src/: main.cpp  settings.cpp  titleScreen.cpp
user/: settings.txt
utils/: versioning.cpp
